--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-query": "^3.12.1"
+    "react-query": "^3.12.1",
+    "react-router-dom": "^5.2.0"
   }
 }
